Thu Nov 11 21:46:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk: hide long command lines by default.  verbose-mode is
	  turned on by V=1 as before.
	  http://jarp.does.notwork.org/diary/200605b.html#200605121

Thu Nov 11 21:32:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (try_func): accept variable address.

	* ext/win32ole/extconf.rb: libuuid is needed on cygwin.

Thu Nov 11 21:24:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): use cygwin_conv_path on cygwin 1.7 or
	  later.

	* ruby.c (push_include_cygwin): ditto.

Thu Nov 11 20:49:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (PRI_LL_PREFIX): format type specifier for
	  LONG_LONG may vary on platforms.

Thu Nov 11 20:45:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (SYMBOL_PREFIX): separate from EXPORT_PREFIX.

	* win32/mkexports.rb (Exports#each_export): use SYMBOL_PREFIX.

Wed Nov 10 07:20:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (scriptbin): make executable file from
	  scripts with stub.

	* ruby.c (load_file_internal): assume xflag for exe file as well
	  as no-shebang file.

	* tool/rbinstall.rb: install script programs.

	* win32/mkexports.rb (Exports#initialize): alias ruby_sysinit for
	  stub.

	* win32/stub.c: stub for scripts.  [EXPERIMENTAL]

Tue Nov  9 21:57:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (init_funcname): allocate and build initialization
	  funciton name at once.

Tue Nov  9 21:14:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (AC_FUNC_GETPGRP, AC_FUNC_SETPGRP): no need when
	  not used.

	* configure.in (EXPORT_PREFIX): check generic prefix.

Tue Nov  9 13:24:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regenc.c (onigenc_minimum_property_name_to_ctype):
	  \p{...} should be case insensitive. [ruby-core:33000]

	* regenc.c (onigenc_property_list_add_property):
	  ditto.
